--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,15 +16,20 @@
 
 <ion-content padding>
 
-    <ion-list>
-        <ion-item>
+    <ion-list *ngIf="qtdProdutos > 0">
+        <ion-item *ngFor="let item of produtos">
             <ion-thumbnail item-start>
-                <img src="img/thumbnail-totoro.png">
+                <img src="{{item.image}}">
             </ion-thumbnail>
-            <h2>My Neighbor Totoro</h2>
-            <p>Hayao Miyazaki • 1988</p>
-            <button ion-button clear item-end>View</button>
+            <h2>{{item.name}}</h2>
+            <p>{{item.description}}</p>
+            <button ion-button clear item-end>{{item.price}}</button>
         </ion-item>
     </ion-list>
+
+    <div *ngIf="qtdProdutos == 0">
+        <h3>Não há produtos Cadastrados</h3>
+        <button type="">Cadastrar</button>
+    </div>
 
 </ion-content>
