--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -35,8 +35,9 @@
                 Login
             </button>
             <br>
-            <button ion-button small clear end>Criar Conta</button>
+            <button (click)="goToFormUser()" ion-button small clear end>Criar Conta</button>
         </ion-card-content>
     </ion-card>
-
+    <input type="file" name="" value="" (change)="readUrl($event)">
+    <img [src]="url" alt="">
 </ion-content>
