--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -33,7 +33,7 @@
     </div>
 
     <button (click)="menosProdutos()" *ngIf="paginaAtual != 1" ion-button clear>menos</button>
-    <label for=""><strong>{{qtdProdutos}} produtos encontrados</strong></label>
+    <label for=""><strong>{{qtdProdutos}} produtos</strong></label>
     <button (click)="maisProdutos()" *ngIf="produtos.length != 0" ion-button clear>mais</button>
 
 </ion-content>
