--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -23,7 +23,7 @@
             </ion-thumbnail>
             <h2>{{item.name}}</h2>
             <p>{{item.description}}</p>
-            <button ion-button clear item-end>{{item.price}}</button>
+            <h2 ion-button clear item-end>{{item.price}}</h2>
         </ion-item>
     </ion-list>
 
